kubernetes/feed/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feed
  template:
    metadata:
      labels:
        app: feed
    spec:
      containers:
        - name: feed
          image: mpalu/feed:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
