kubernetes/feed/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feed
  namespace: app
  annotations:
    kubernetes.io/ingress.class: ambassador
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: feed
                port:
                  number: 80
